palamod alpha 7 +1 alpha6

--- a/src/main/resources/assets/palamod_/lang/en_us.lang
+++ b/src/main/resources/assets/palamod_/lang/en_us.lang
@@ -9,6 +9,7 @@ tile.ostryaplanks.name=Ostrya planks
 item.endium_pack_hoe.name=EndiumHoe nt
 tile.xp_berry_creative.name_=Xp bush creative
 fluid.fake_water=Fake water
+item.paladiumfastsword.name=Paladium fastsword
 tile.jacarandaplanks.name=Jacaranda planks
 item.greenpaladiumingot.name=Green paladium ingot
 item.amethysteaxe.name=Amethyste axe
@@ -29,8 +30,10 @@ item.titane_bradsword.name=Titane Broadsword
 tile.greenpaladiumblock.name=Block of paladium green
 item.amethystearmorlegs.name=Amethyste leggins
 item.endium_pack_ingot.name=Endium ingot
+item.compressedpaladium.name=Compressed paladium
 item.titanearmorbody.name=Titane chestplate
 tile.findiumslab.name=Findium slab
+item.endiumstick.name=Paladium stick
 item.endium_sword.name=Endium sword
 item.titanearmorboots.name=Titane boots
 tile.xpberry.name=Xp bush growned
@@ -46,6 +49,7 @@ item.endium_hoe.name=Endium Hoe nt
 item.paladiumarmorhelmet.name=Paladium helmet
 item.titanestick.name=Titane stick
 item.paladiumshovel.name=Paladium shovel
+item.paladiumbroadsword.name=Paladium Broadsword
 item.titanehammer.name=Titane hammer
 item.endium_boots.name=Endium Boots
 tile.judeecercisslab.name=Judeecercis slab
@@ -54,6 +58,7 @@ tile.ostrya_planks.name=Ostrya planks
 tile.endium_pack_block.name=Block of Endium
 item.endium_legs.name=Endium Leggings
 item.titanefastsword.name=Titane fastsword
+item.paladiumstick.name=Paladium stick
 item.paladiumarmorboots.name=Paladium boots
 item.xpfruit.name=Xp berry
 tile.greenpaladiumstairs.name=Green paladium stairs
@@ -71,9 +76,11 @@ tile.xpberrycreative.name=Xp bush creative
 item.amethyste_shovel.name=Amethyste shovel
 item.paladiumhammer.name=Paladium hammer
 item.endium_pack_armorlegs.name=Endium Leggings
+tile.palamachine.name=Palamachine
 item.endium_pack_armorhelmet.name=Endium helmet
 fluid.fakewater=Fakewater
 tile.xp_berry_normal.name=Xp bush
+item.endiumfastsword.name=Endium fastsword
 item.endium_pack_pickaxe.name=Endium Pickaxe
 item.amethysteshovel.name=Amethyste shovel
 itemGroup.tabpalamod=Palamod
