--- a/src/main/resources/assets/palamod_/lang/fr_fr.lang
+++ b/src/main/resources/assets/palamod_/lang/fr_fr.lang
@@ -8,8 +8,9 @@ item.amethystearmorboots.name=Bottes en Amethyste
 tile.ostryaplanks.name=Ostrya planks
 item.endium_pack_hoe.name=EndiumHoe nt
 item.endium_pack_axe.nameb=Hache en endium
-tile.xp_berry_creative.name_=xp bush créative édition
 fluid.fake_water=Fake water
+tile.xp_berry_creative.name_=xp bush créative édition
+item.paladiumfastsword.name=Titane fastsword
 tile.jacarandaplanks.name=planches en jacaranda
 item.greenpaladiumingot.name=Greenpaladiumingot
 item.amethysteaxe.name=Hache en amethyste
@@ -19,19 +20,21 @@ tile.endium_block.name=Block d'endium
 tile.paladium_ore.name=minerias de paladium
 item.paladiumsword.name=Paladium sword
 item.titaneshovel.name=Pelle en titane
-item.amethyste_boots.name=Bottes en Amethyste
 tile.erable_slab.name=Slab en erable
+item.amethyste_boots.name=Bottes en Amethyste
 item.findium.name=Lingot de findium
 tile.paladiumgreenore.name=Minerias de paladium vert
 item.amethyste_helmet.name=Casque en améthyste
 tile.ostryastairs.name=Escalier en Ostrya
 item.amethystesword.name=Epée en améthyste
-item.titane_bradsword.name=Broadsword en titane
 tile.greenpaladiumblock.name=Block de paladium vert
+item.titane_bradsword.name=Broadsword en titane
 item.amethystearmorlegs.name=Jambière en améthyste
 item.endium_pack_ingot.name=Lingot de titane
+item.compressedpaladium.name=Compressed paladium
 item.titanearmorbody.name=Plastron en Titane
 tile.findiumslab.name=Slab en findium
+item.endiumstick.name=Paladium stick
 item.endium_sword.name=Epée en endium
 item.titanearmorboots.name=Bottes en Titane
 tile.xpberry.name=Xp bush poussé
@@ -45,6 +48,7 @@ item.endium_hoe.name=Houe en endium
 item.paladiumarmorhelmet.name=Paladium helmet
 item.titanestick.name=Stick en Titane
 item.paladiumshovel.name=Pelle en paladium
+item.paladiumbroadsword.name=Titane Broadsword
 item.titanehammer.name=Hammer en titane
 item.endium_boots.name=Bottes en endium
 tile.judeecercisslab.name=slab en Judeecercis 
@@ -53,6 +57,7 @@ tile.ostrya_planks.name=Planches en Ostrya
 tile.endium_pack_block.name=Block d'endium
 item.endium_legs.name=Jambière en endium
 item.titanefastsword.name=Fastsword en titane
+item.paladiumstick.name=Paladium stick
 item.paladiumarmorboots.name=Bottes en Paladium
 item.xpfruit.name=Xp berry
 tile.greenpaladiumstairs.name=Escalier en paladium very
@@ -67,9 +72,11 @@ item.endium_pickaxe.name=Pioche en endium
 tile.xpberrycreative.name=Xp bush creative
 item.amethyste_shovel.name=Pelle en améthyste
 item.paladiumhammer.name=Hammer en paladium
+tile.palamachine.name=Palamachine
 item.endium_pack_armorhelmet.name=Casque en endium
 fluid.fakewater=Fakewater
 tile.xp_berry_normal.name=Xp bush
+item.endiumfastsword.name=Paladium fastsword
 item.endium_pack_pickaxe.name=Pioche en endium
 item.amethysteshovel.name=Pelle en Améthyste
 itemGroup.tabpalamod=Palamod
@@ -120,6 +127,5 @@ tile.erable_stairs.name=Escalier en erable
 item.endium_hammer.name=Hammer en endium
 tile.caveblock.name=Caveblock
 item.amethystehammer.name=hammer en améthyste
-tile.titaneslab.name=Titane slab
-item.endium_pack_sword.name=Endium sword
-item.titanesword.name=Titane sword
+tile.titaneslab.name=Slab en titane
+item.titanesword.name=Epée en titane
